# fake-rs

./: Cargo.toml  README.md
src/: ip.rs  lib.rs  name.rs  phone.rs  user_agent.rs  user_agent_data.rs
